* Move collision detection to the "target" objects * Add rudimentary pipes * Stop everything when a collision occur * Adjust the min-height to better fitting on mobile screen

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   background: #333;
   color: #fff;
-  min-height: 100vh;
+  min-height: 95vh;
   display: flex;
   justify-content: center;
   align-items: center;
